fix bug video bg too big to use sidebar.

--- a/app/static/CSS/savvy.css
+++ b/app/static/CSS/savvy.css
@@ -15,11 +15,12 @@ video {
   left: 50%;
   min-width: 100%;
   min-height: 100%;
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 100%;
   z-index: -100;
   transform: translateX(-50%) translateY(-50%);
   transition: 1s opacity;
+  object-fit: cover;
 }
 
 .stopfade {
